[package]
name = "server_clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
serde_derive = "1.0.131"
serde = "1.0.131"
actix-web-actors = "3.0.0"
actix = "0.12.0"