[package]
name = "server_clipboard"
version = "0.1.0"
edition = "2021"
authors = ["zxq <phpgoc@icloud.com>"]
license = "MIT OR Apache-2.0"


[dependencies]
actix-web = "3"
env_logger = "0.8"
serde_derive = "1.0.131"
serde = "1.0.131"
actix-web-actors = "3.0.0"
actix = "0.10.0"
clap = {version = "2.34.0", features = ["yaml"]}
rand = "*"