[package]
name = "server_clipboard"
version = "0.2.0"
edition = "2021"
authors = ["zxq <phpgoc@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "server_clipboard"
repository= "https://github.com/phpgoc/server_clipboard"

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
env_logger = "0.8"
serde_derive = "1.0.131"
serde = "1.0.131"
actix-web-actors = "3.0.0"
actix = "0.10.0"
clap = {version = "2.34.0", features = ["yaml"]}
rand = "0.8.4"
openssl = "0.10"